Revert "spacing fix (tho more of a hack than a fix let's be real)"
This reverts commit 79af484d72d5ac5df4a323cb8eb140d905514e6f.

--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ p {
 
 #timechoice {
     grid-area: timechoice;
-    max-height: 0em!important;
 }
 
 #col1 {
@@ -920,9 +919,6 @@ strong {
 }
 
 @media (max-width: 900px) {
-    #timechoice {
-        max-height: none!important;
-    }
     .txt {
         padding-top: .4em;
         padding-bottom: .4em;
